FPGA structure complete

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -40,7 +40,7 @@
     year = {2006},
     month = aug,
     booktitle = {2006 International Conference on Field Programmable Logic and Applications},
-    pages = {119-124},
+    pages = {119--124},
     doi = {10.1109/FPL.2006.311203}
 }
 
@@ -59,7 +59,7 @@
     year = {2013},
     month = mar,
     booktitle = {Proceedings of the \nth{6} Workshop on General Purpose Processor Using Graphics Processing Units},
-    pages = {86-95},
+    pages = {86--95},
     doi = {10.1145/2458523.2458532}
 }
 
@@ -101,6 +101,16 @@
     booktitle = {Proceedings of the \nth{4} International Workshop on OpenCL},
     articleno = {5},
     doi = {10.1145/2909437.2909447}
+}
+
+@manual{ultrascaleclb2017,
+    author = {{Xilinx, Inc.}},
+    title = {UltraScale Architecture Configurable Logic Block -- User Guide},
+    year = 2017,
+    month = feb,
+    edition = {UG574 (v1.5)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
 }
 
 @inproceedings{copik2017,
@@ -155,7 +165,7 @@
     journal = {IEEE Micro},
     volume = {Volume 38},
     number = {Issue 2},
-    pages = {8-20},
+    pages = {8--20},
     doi = {10.1109/MM.2018.022071131}
 }
 
@@ -175,7 +185,7 @@
     year = 2018,
     month = apr,
     booktitle = {15th USENIX Symposium on Networked Systems Design and Implementation},
-    pages = {51-64}
+    pages = {51--64}
 }
 
 @inproceedings{fowers2018,
@@ -190,18 +200,36 @@
     month = jun,
     booktitle = {Proceedings of the \nth{45} Annual International Symposium on
                   Computer Architecture},
-    pages = {1-14},
+    pages = {1--14},
     doi = {10.1109/ISCA.2018.00012}
 }
 
-@thesis{krebs2019,
-    author = {Krebs, Florian},
-    title = {A Translation Framework from RVC-CAL Dataflow Programs to \mbox{OpenCL}/SYCL based Implementations},
-    year = {2019},
-    month = jan,
-    school = {Technische Universität Kaiserslautern},
-    type = {Masterarbeit},
-    address = {Gottlieb-Daimler-Straße, Gebäude 47, 67663 Kaiserslautern}
+@manual{alveobrief2018,
+    author = {{Xilinx, Inc.}},
+    title = {Xilinx Alveo -- Adaptable Accelerator Cards for Data Center Workloads},
+    year = 2018,
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
+}
+
+@manual{ultrascaleclock2018,
+    author = {{Xilinx, Inc.}},
+    title = {UltraScale Architecture Clocking Resources -- User Guide},
+    year = 2018,
+    month = dec,
+    edition = {UG572 (v1.8)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
+}
+
+@manual{ultrascalemem2019,
+    author = {{Xilinx, Inc.}},
+    title = {UltraScale Architecture Memory Resources -- User Guide},
+    year = 2019,
+    month = feb,
+    edition = {UG573 (v1.10)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
 }
 
 @inproceedings{burns2019,
@@ -212,6 +240,16 @@
     booktitle = {Proceedings of the \nth{7} International Workshop on OpenCL},
     articleno = {??},
     doi = {10.1145/3318170.3318183}
+}
+
+@manual{ultrascaledsp2019,
+    author = {{Xilinx, Inc.}},
+    title = {UltraScale Architecture DSP Slice -- User Guide},
+    year = 2019,
+    month = may,
+    edition = {UG579 (v1.8)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
 }
 
 @standard{sycl2019,
@@ -270,6 +308,16 @@
     year = 2019,
     month = aug,
     edition = {DS890 (v3.10)},
+    organization = {Xilinx, Inc.},
+    address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
+}
+
+@manual{ultrascaleio2019,
+    author = {{Xilinx, Inc.}},
+    title = {UltraScale Architecture SelectIO Resources -- User Guide},
+    year = 2019,
+    month = aug,
+    edition = {UG571 (v1.12)},
     organization = {Xilinx, Inc.},
     address = {2100 Logic Drive, San Jose, CA 95124, Vereinigte Staaten von Amerika}
 }
