--- a/glossar.tex
+++ b/glossar.tex
@@ -2,13 +2,16 @@
 
 \newacronym{api}{API}{\textit{application programming interface}}
 \newacronym{apu}{APU}{\textit{accelerated processing unit}}
+\newacronym{clb}{CLB}{\textit{configurable logic block}}
+\newacronym{cmt}{CMT}{\textit{clock management tile}}
 \newacronym{cpu}{CPU}{\textit{central processing unit}}
 \newacronym{dsp}{DSP}{\textit{digital signal processor}}
 \newacronym{fpga}{FPGA}{\textit{field programmable gate array}}
 \newacronym{gpgpu}{GPGPU}{\textit{general-purpose computing on graphics processing units}}
 \newacronym{gpu}{GPU}{\textit{graphics processing unit}}
 \newacronym{ii}{II}{\textit{initiation interval}}
-\newacronym{lut}{LUT}{\textit{look-up table}}
+\newacronym{iob}{IOB}{\textit{input/output block}}
+\newacronym{lut}{LUT}{Lookup-Tabelle}
 \newacronym{slr}{SLR}{\textit{super logic region}}
 
 \newglossaryentry{cuda}{name = CUDA,
