--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,8 @@
 \usepackage{tcolorbox}
 \usepackage{tikz}
 
+\usetikzlibrary{decorations.pathreplacing}
+
 \addbibresource{bibliography.bib}
 
 \input{glossar}
@@ -99,6 +101,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \printbibliography[heading=bibintoc]
+
+\listoffigures
+\listoftables
+\listoflistings
 
 \appendix
 \input{anhang}
